--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
 
 #newsletter {
     text-align: center;
-    background-color: rgb(252, 232, 203);
+    background-color: #fb691c;
     padding: 5rem 0;
 }
 
@@ -184,9 +184,9 @@ label {
 #location {
     display: grid;
     grid-template-columns: auto auto;
-    max-width: 90%;
+    
     margin: 8rem auto;
-    background-color: antiquewhite;
+    background-color: #f6f7fb;
     
 }
 
@@ -217,14 +217,15 @@ label {
 }
 
 #cards div img {
-    max-height: 750px;
+    max-height: 650px;
+    
 }
 
 
 #call-to-action {
     text-align: center;
-    height: 600px;
-    background-color: antiquewhite;
+    height: 500px;
+    background-color:#f6f7fb;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -234,7 +235,7 @@ label {
 
 footer {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: #f6f7fb;
     margin-top: -1rem;
     padding-bottom: 1rem;
 }
