--- a/style.css
+++ b/style.css
@@ -19,12 +19,14 @@ nav {
     justify-content: center;
     background-color:#023561;
     
+    
 }
 
 nav h1 {
     margin: 0 2rem;
-    color: white;
+    color: #f16625;
     text-transform: uppercase;
+    
 }
 
 ul {
@@ -48,6 +50,7 @@ li a {
     padding: 1rem;
     text-decoration: none;
     text-transform: uppercase;
+    
  }
 
  li a:hover {
@@ -65,23 +68,26 @@ li a {
      font-family: 'Poppins', sans-serif;
  }
 
-header {
+#bg {
     height: 80vh;
     background-color: yellow;
     background-image: url("/images/main-runner.jpg");
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
+    position: relative;
 }
 
-#title-banner {
+#bg h1 {
     position: absolute;
-    top: 65%;
-    left: 60%;
+    top: 80%;
+    left: 5%;
+    font-size: 4rem;
     color: white;
-    font-size: 3rem;
-    text-transform: uppercase;
+    background-color: #f16625;
+    padding: 0 3rem;
 }
+
 
 #features {
     margin-top: 6%;
@@ -131,17 +137,13 @@ label {
     
 }
 
-/*input {
-    margin-top: 1.5rem;
-    min-width: 50%;
-    height: 2.5rem;
-}*/
 
 #blog {
     display: grid;
     grid-template-columns: auto auto;
-    max-width: 80%;
-    margin: 3rem auto;
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 5% 10%;
 }
 
 .blog-article {
@@ -149,6 +151,11 @@ label {
     padding: 20px;
     display: flex;
 }
+
+.blog-article div h3 {
+    margin-top: 0;
+}
+
 
 .image-blog {
    height: 200px;
@@ -163,7 +170,7 @@ label {
 
 #instagram {
     text-align: center;
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 
 #instagram-grid {
@@ -173,7 +180,7 @@ label {
     align-items: center;
     justify-content: center;
     max-width: 95%;
-    margin: 3rem auto;
+    margin: 4rem auto;
 }
 
 #instagram-grid img {
@@ -182,21 +189,29 @@ label {
 }
 
 #location {
-    display: grid;
-    grid-template-columns: auto auto;
-    
-    margin: 8rem auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 8rem;
     background-color: #f6f7fb;
+   min-height: 450px;
     
 }
 
+#map {
+    width: 50%;
+    
+} 
+
 #latest-marathon {
+    width: 30%;
     padding: 3rem;
 }
 
 
 #personal-trainers {
     text-align: center;
+    margin-top: 6rem;
 }
 
 #cards {
@@ -205,12 +220,12 @@ label {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 3rem auto;
+    margin: 2rem auto;
     max-width: 95%;
 }
 
 #cards div {
-    width: fit-content;
+    max-width: fit-content;
     margin: 0.2rem;
     
     
@@ -240,18 +255,52 @@ footer {
     padding-bottom: 1rem;
 }
     
- @media screen and (min-width: 320px) and (max-width: 660px) {
+ @media screen and (max-width: 780px) {
     nav {
         
         flex-direction: column;
         
     }
 
-    header {
-        height: 30vh;
+    #bg {
+        height: 50vh;
+    }
+    
+    #location {
+        flex-direction: column;
     }
 
-  
-    
+    #bg h1 {
+        
+        font-size: 3rem;
+        left: 7%;
+        
+        
+    }
 
+ 
+
+ }
+
+ @media screen and (max-width: 1580px) {
+    #blog {
+        display: grid;
+        grid-template-columns: auto;
+        max-width: 70%;
+        margin: 0 auto;
+    }
+
+
+ }
+
+ @media screen and (max-width: 900px) {
+    #map {
+        width: 100%;
+        height: 450px;
+    }
+
+    #latest-marathon {
+        text-align: center;
+        width: 90%;
+    }
  }
