--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ nav h1 {
     color: #f16625;
     text-transform: uppercase;
     
+    
 }
 
 ul {
@@ -34,8 +35,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    
-    flex-grow: 9;
+    flex-grow: 8;
     
 }
 
@@ -71,7 +71,7 @@ li a {
 #bg {
     height: 80vh;
     background-color: yellow;
-    background-image: url("/images/main-runner.jpg");
+    background-image: url("../images/main-runner.jpg");
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
@@ -103,6 +103,7 @@ li a {
     flex-wrap: wrap;
     justify-content: center;
     
+    
 }
 
 .cards {
@@ -122,7 +123,12 @@ li a {
     
     display: flex;
     justify-content: center;
+    
 
+}
+
+iframe {
+    background-color: yellow;
 }
 
 
@@ -130,11 +136,44 @@ li a {
     text-align: center;
     background-color: #fb691c;
     padding: 5rem 0;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    top: -5rem;
 }
 
 label {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-transform: uppercase;
     
+}
+
+#email-container {
+    height: 3rem;
+    width: 40%;
+    margin-top: 1.5rem;
+}
+
+.btn {
+    background-color:  #db3c3c;
+    color: white;
+    height: 3rem;
+    width: 9rem;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 500;
+    border: none;
+    text-transform: uppercase;
+    
+}
+
+form .btn {
+    margin-top: 1.5rem;
+    background-color: #f6f7fb;
+    color:  #fb691c;
 }
 
 
@@ -180,6 +219,7 @@ label {
     align-items: center;
     justify-content: center;
     max-width: 95%;
+    min-width: 30%;
     margin: 4rem auto;
 }
 
@@ -278,11 +318,16 @@ footer {
         
     }
 
- 
+    nav h1 {
+        margin: 1rem 2rem;
 
  }
 
- @media screen and (max-width: 1580px) {
+
+}
+
+ @media screen and (max-width: 1470px) {
+   
     #blog {
         display: grid;
         grid-template-columns: auto;
@@ -302,5 +347,17 @@ footer {
     #latest-marathon {
         text-align: center;
         width: 90%;
+    }
+ }
+
+ @media screen and (max-width: 1875px) {
+    #cards {
+        max-width: 70%;
+    }
+ }
+
+ @media screen and (max-width: 1289px) {
+    #cards {
+        max-width: 60%;
     }
  }
